[project]
name = "decp.info"
description = "Interface d'exploration et d'analyse des marchés publics français."
version = "2.5.1"
requires-python = ">= 3.10"
authors = [
    { name = "Colin Maudry", email = "colin@colmo.tech" }
]
dependencies = [
    "dash==3.4.0",
    "dash[compress]",
    "polars",
    "gunicorn",
    "dash-bootstrap-components",
    "python-dotenv",
    "xlsxwriter",
    "plotly[express]",
    "httpx",
    "pandas", # utilisé pour la création de certains graphiques
    "unidecode"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]
